crates/swc_css_parser/tests/errors/number/dot/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/number/dot/input.css:1:13
  |
1 | a { width: 0.; }
  |             ^

